# facebook-scrapper-py

./: .gitignore  README.md  build.sh  main.py  newmain.py  pip.conf  pyproject.toml  requirements.txt  scraper.py
